--- a/Utilidades.xUnit.Tests/packages.config
+++ b/Utilidades.xUnit.Tests/packages.config
@@ -1,9 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoFixture" version="4.18.1" targetFramework="net48" />
+  <package id="Fare" version="2.1.1" targetFramework="net48" />
+  <package id="FluentAssertions" version="6.12.1" targetFramework="net48" />
   <package id="Microsoft.TestPlatform.ObjectModel" version="17.8.0" targetFramework="net48" />
   <package id="NuGet.Frameworks" version="6.5.0" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net48" />
   <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.0" targetFramework="net48" />
   <package id="xunit" version="2.6.6" targetFramework="net48" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net48" />
   <package id="xunit.analyzers" version="1.10.0" targetFramework="net48" />
