--- a/Utilidades.xUnit.Tests/packages.config
+++ b/Utilidades.xUnit.Tests/packages.config
@@ -1,20 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Argon" version="0.22.0" targetFramework="net48" />
   <package id="AutoFixture" version="4.18.1" targetFramework="net48" />
+  <package id="DiffEngine" version="15.5.3" targetFramework="net48" />
+  <package id="EmptyFiles" version="8.5.0" targetFramework="net48" />
   <package id="Fare" version="2.1.1" targetFramework="net48" />
   <package id="FluentAssertions" version="6.12.1" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.TestPlatform.ObjectModel" version="17.8.0" targetFramework="net48" />
   <package id="NuGet.Frameworks" version="6.5.0" targetFramework="net48" />
-  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net48" />
+  <package id="SimpleInfoName" version="3.0.1" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.CodeDom" version="8.0.0" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="8.0.0" targetFramework="net48" />
+  <package id="System.IO.Hashing" version="8.0.0" targetFramework="net48" />
+  <package id="System.Management" version="8.0.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net48" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.0" targetFramework="net48" />
-  <package id="xunit" version="2.6.6" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="Verify" version="27.0.1" targetFramework="net48" />
+  <package id="Verify.Xunit" version="27.0.1" targetFramework="net48" />
+  <package id="xunit" version="2.9.2" targetFramework="net48" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net48" />
-  <package id="xunit.analyzers" version="1.10.0" targetFramework="net48" />
-  <package id="xunit.assert" version="2.6.6" targetFramework="net48" />
-  <package id="xunit.core" version="2.6.6" targetFramework="net48" />
-  <package id="xunit.extensibility.core" version="2.6.6" targetFramework="net48" />
-  <package id="xunit.extensibility.execution" version="2.6.6" targetFramework="net48" />
+  <package id="xunit.analyzers" version="1.16.0" targetFramework="net48" developmentDependency="true" />
+  <package id="xunit.assert" version="2.9.2" targetFramework="net48" />
+  <package id="xunit.core" version="2.9.2" targetFramework="net48" />
+  <package id="xunit.extensibility.core" version="2.9.2" targetFramework="net48" />
+  <package id="xunit.extensibility.execution" version="2.9.2" targetFramework="net48" />
   <package id="xunit.runner.visualstudio" version="2.5.7" targetFramework="net48" developmentDependency="true" />
 </packages>
