--- a/Utilidades/Utilidades.csproj
+++ b/Utilidades/Utilidades.csproj
@@ -43,7 +43,10 @@
   <ItemGroup>
     <Compile Include="Calculadora.cs" />
     <Compile Include="DDD.cs" />
-    <Compile Include="Persona.cs" />
+    <Compile Include="GildedRose\GildedRose.cs" />
+    <Compile Include="GildedRose\Item.cs" />
+    <Compile Include="GildedRose\Persona.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validador.cs" />
   </ItemGroup>
