--- a/Utilidades.xUnit.Tests/packages.config
+++ b/Utilidades.xUnit.Tests/packages.config
@@ -2,12 +2,14 @@
 <packages>
   <package id="Argon" version="0.22.0" targetFramework="net48" />
   <package id="AutoFixture" version="4.18.1" targetFramework="net48" />
+  <package id="Castle.Core" version="5.1.1" targetFramework="net48" />
   <package id="DiffEngine" version="15.5.3" targetFramework="net48" />
   <package id="EmptyFiles" version="8.5.0" targetFramework="net48" />
   <package id="Fare" version="2.1.1" targetFramework="net48" />
   <package id="FluentAssertions" version="6.12.1" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.TestPlatform.ObjectModel" version="17.8.0" targetFramework="net48" />
+  <package id="Moq" version="4.20.72" targetFramework="net48" />
   <package id="NuGet.Frameworks" version="6.5.0" targetFramework="net48" />
   <package id="SimpleInfoName" version="3.0.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
