--- a/Utilidades/Utilidades.csproj
+++ b/Utilidades/Utilidades.csproj
@@ -45,8 +45,8 @@
     <Compile Include="DDD.cs" />
     <Compile Include="GildedRose\GildedRose.cs" />
     <Compile Include="GildedRose\Item.cs" />
-    <Compile Include="GildedRose\Persona.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Persona.cs" />
+    <Compile Include="GildedRose\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validador.cs" />
   </ItemGroup>
